--- a/pragmatic/accountapp/templates/accountapp/detail.html
+++ b/pragmatic/accountapp/templates/accountapp/detail.html
@@ -7,7 +7,7 @@
 
       {% if target_user.profile %}
       <img src="{{ target_user.profile.image.url }}" alt=""
-           style="height: 12rem; width: 12rem; border-radius: 20rem; margin-bottom: 2rem;">
+           style="height: 12rem; width: 12rem; border-radius: 20rem; margin-bottom: 2rem; object-fit: cover;">
 
       <h2 style="font-family: 'NanumSquareB'">
         {{ target_user.profile.nickname }}
@@ -27,7 +27,7 @@
           Create Profile
         </h2>
       </a>
-      {% elsd %}
+      {% else %}
       <h2>
         닉네임 미설정
       </h2>
