--- a/pragmatic/accountapp/templates/accountapp/detail.html
+++ b/pragmatic/accountapp/templates/accountapp/detail.html
@@ -50,6 +50,11 @@
       {% endif %}
 
     </div>
+
+    <div>
+      {% include 'snippets/list_fragment.html' with article_list=object_list %}
+    </div>
+
   </div>
 
 
