--- a/pragmatic/templates/header.html
+++ b/pragmatic/templates/header.html
@@ -11,7 +11,9 @@
         <span>Projects</span>
         </a>
 
-        <span>nav3</span>
+        <a href="{% url 'subscribeapp:list' %}" class="pragmatic_header_nav">
+        <span>Subscription</span>
+        </a>
 
         {% if not user.is_authenticated %}
         <a href="{% url 'accountapp:login' %}?next={{ request.path }}" class="pragmatic_header_nav">
