--- a/pragmatic/accountapp/templates/accountapp/create.html
+++ b/pragmatic/accountapp/templates/accountapp/create.html
@@ -6,9 +6,9 @@
 
   <div style="text-align: center; max-width: 500px; margin: 4rem auto">
     <div class="mb-4">
-      <h4>Comment Create</h4>
+      <h4> SignUp </h4>
     </div>
-    <form action="{% url 'commentapp:create' %}" method="POST">
+    <form action="{% url 'accountapp:create' %}" method="POST">
       {% csrf_token %}
       {% bootstrap_form form %}
       <input type="submit" class="btn btn-dark rounded-pill col-6 mt-3">
